[gd_scene load_steps=2 format=3 uid="uid://dakcgn7px8emr"]

[ext_resource type="Script" path="res://Components/Player/debug_window.gd" id="1_3bvbw"]

[node name="debug_window" type="Window"]
position = Vector2i(205, 35)
size = Vector2i(320, 580)
extend_to_title = true
script = ExtResource("1_3bvbw")

[node name="debug_warp" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="debug_warp"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="flow_container" type="FlowContainer" parent="debug_warp/margin_container"]
layout_mode = 2

[node name="level_up" type="Button" parent="debug_warp/margin_container/flow_container"]
unique_name_in_owner = true
layout_mode = 2
text = "level up"

[node name="h_box_container" type="HBoxContainer" parent="debug_warp/margin_container/flow_container"]
layout_mode = 2

[node name="set_exp" type="Button" parent="debug_warp/margin_container/flow_container/h_box_container"]
unique_name_in_owner = true
layout_mode = 2
text = "set exp"

[node name="exp_value" type="TextEdit" parent="debug_warp/margin_container/flow_container/h_box_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="stat_setting" type="HBoxContainer" parent="debug_warp/margin_container/flow_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="set_stat" type="Button" parent="debug_warp/margin_container/flow_container/stat_setting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
text = "set_stat"

[node name="stat_menu" type="MenuButton" parent="debug_warp/margin_container/flow_container/stat_setting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
text = "Stat Selection"

[node name="stat_slider" type="HSlider" parent="debug_warp/margin_container/flow_container/stat_setting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 5

[connection signal="pressed" from="debug_warp/margin_container/flow_container/level_up" to="." method="_on_level_up_pressed"]
[connection signal="pressed" from="debug_warp/margin_container/flow_container/h_box_container/set_exp" to="." method="_on_set_exp_pressed"]
[connection signal="pressed" from="debug_warp/margin_container/flow_container/stat_setting/set_stat" to="." method="_on_set_stat_pressed"]
